apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__interface_field.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            test
            itf {
                id
                other
            }
        }
        
extracted_policies: {}
successful policies: []
filtered:
query {
  test
  itf {
    other
  }
}

paths: ["/itf/id"]
