apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__interface_fragment-3.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: paths
---
[
    Path(
        [
            Key(
                "itf",
            ),
            Fragment(
                "User",
            ),
        ],
    ),
]
