apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__interface_fragment-4.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: doc
---
query {
  topProducts {
    type
  }
  itf {
    id
    ...F
  }
}
fragment F on User {
  name
}

