apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__interface_inline_fragment-2.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: doc
---
{
  topProducts {
    type
  }
  itf {
    id
  }
}

