apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__interface_type-5.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult {\n    query: QUERY2,\n    extracted_policies: &extracted_policies,\n    successful_policies: [\"itf\".to_string(),\n                    \"a\".to_string()].into_iter().collect(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            test
            itf {
                ... on A {
                    id
                }
                ... on B {
                    id
                }
            }
        }
        
extracted_policies: {"a", "b", "itf"}
successful policies: ["itf", "a"]
filtered:
query {
  test
  itf {
    ... on A {
      id
    }
  }
}

paths: ["/itf/... on B"]
