apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__interface_typename-3.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: doc
---
query Anonymous {
  post(id: "1") {
    __typename
    ... on PublicBlog {
      __typename
      title
    }
  }
}

